feat: buscando todas disciplinas com alunos e professores
